# CPU_Scheduling

./: .gitignore  CMakeLists.txt  README.md  a  main.cpp
.cache/clangd/index/: display.cpp.CC6CC61EA870C8A2.idx  display.hpp.D9D5263691CEDD23.idx  main.cpp.61A371CE203A36AB.idx
include/: display.hpp  fcfs.hpp  helperFunctions.hpp  process.h  process.hpp  processGenerator.hpp  rr.hpp  sjf.hpp
src/: display.cpp  fcfs.cpp  helperFunctions.cpp  process.cpp  processGenerator.cpp  rr.cpp  sjf.cpp
